--- a/wp-content/themes/twentyeleven/rtl.css
+++ b/wp-content/themes/twentyeleven/rtl.css
@@ -229,10 +229,6 @@ a.assistive-text:focus {
 .singular .entry-header .entry-meta {
 	padding-left: 0;
 }
-.singular .entry-header .entry-meta {
-	left: auto;
-	right: 0;
-}
 .singular .entry-meta .edit-link a {
 	left: auto;
 	right: 50px;
@@ -356,10 +352,6 @@ section.recent-posts .other-recent-posts .comments-link > span {
 }
 
 /* Singular navigation */
-#nav-single {
-	float: left;
-	text-align: left;
-}
 #nav-single .nav-next {
 	padding-left: 0;
 	padding-right: .5em;
@@ -516,6 +508,9 @@ section.recent-posts .other-recent-posts .comments-link > span {
 	.singular .entry-meta .edit-link a {
 		left: auto;
 		right: 0;
+	}
+	.singular #author-info {
+		margin: 2.2em -8.8% 0;
 	}
 	/* Make sure we have room for our comment avatars */
 	.commentlist > li.comment,
